--- a/hcds-a2-bias.ipynb
+++ b/hcds-a2-bias.ipynb
@@ -4,7 +4,13 @@
   "metadata": {
     "colab": {
       "name": "A2.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": [
+        "Ng3hiNGTiGu7",
+        "mrvm-mD3iLqz",
+        "KhqVVLF8ixmj",
+        "vcKvXZg3kwg7"
+      ]
     },
     "kernelspec": {
       "name": "python3",
@@ -897,26 +903,6 @@
           "execution_count": 98
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "bTdRll_eaynz"
-      },
-      "source": [
-        "We need to"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "UvPkI_NxOvWR"
-      },
-      "source": [
-        "population_data.to_csv(\"population_data.csv\")"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
